--- a/css/core.css
+++ b/css/core.css
@@ -1,4 +1,8 @@
 @import url(reset.css);
 @import url(style.css);
 @import url(main.css);
+@import url(toast.css);
+/* @import url(reg.css); */
+
+
 
