--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,16 @@
-.main{
+.main {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.main-left{
+.main-left {
   width: 45%;
   padding-left: 60px;
 }
-.main-right{
+.main-right {
   width: 45%;
-  
 }
-.main-text{
+.main-text {
   max-width: 800px;
   padding: 40px;
   border-radius: 30px;
@@ -20,29 +19,29 @@
   background-color: rgba(182, 126, 6, 0.7);
   border: solid 2px black;
 }
-.main-text__title{
-  font-family: "Archivo Black", sans-serif;
+.main-text__title {
+  font-family: 'Archivo Black', sans-serif;
   font-size: 32px;
   font-weight: 600;
   padding-bottom: 50px;
 }
-.main-text__text{
-  font-family: "Archivo Black", sans-serif;
+.main-text__text {
+  font-family: 'Archivo Black', sans-serif;
   font-size: 24px;
   padding-bottom: 30px;
 }
 
-.main-right{
+.main-right {
   display: flex;
   justify-content: space-between;
 }
-.main-right__block{
+.main-right__block {
   width: 75%;
 }
-.main-right__sidebar{
+.main-right__sidebar {
   width: 20%;
 }
-.main-right__block-content{
+.main-right__block-content {
   max-width: 630px;
   background-color: #e0e0e0;
   border-radius: 30px;
@@ -51,25 +50,25 @@
   padding: 10px;
   margin-top: 30px;
 }
-.main-right__block-1{
+.main-right__block-1 {
   margin-bottom: 30px;
 }
-.main-right__block-2{
+.main-right__block-2 {
   margin-bottom: 30px;
 }
-.block-1__title{
+.block-1__title {
   text-align: center;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 32px;
   font-weight: 600;
   color: rgb(71, 71, 71);
 }
-.block-1__title-text{
-  background-color: #C18730;
+.block-1__title-text {
+  background-color: #c18730;
   border-radius: 30px;
   margin: 40px auto;
   text-align: center;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 24px;
   font-weight: 600;
   color: rgb(71, 71, 71);
@@ -77,40 +76,39 @@
   max-width: 340px;
   color: #fff;
 }
-.block-2__title{
+.block-2__title {
   text-align: center;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 32px;
   font-weight: 600;
   color: rgb(71, 71, 71);
   margin-bottom: 20px;
 }
-.block-2__input{
-  font-family: "Archivo Black", sans-serif;
-  font-size: 24px;
-  font-weight: 600;
-  color: rgb(71, 71, 71);
-  
-}
-.block-2__label{
-  font-family: "Archivo Black", sans-serif;
+.block-2__input {
+  font-family: 'Archivo Black', sans-serif;
   font-size: 24px;
   font-weight: 600;
   color: rgb(71, 71, 71);
 }
-.block-2__content{
+.block-2__label {
+  font-family: 'Archivo Black', sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  color: rgb(71, 71, 71);
+}
+.block-2__content {
   display: flex;
   flex-direction: column;
 }
 
-.block-2__left{
+.block-2__left {
   width: 48%;
   padding-left: 25px;
 }
-.block-2__right{
+.block-2__right {
   width: 48%;
 }
-.block-2__wrapper{
+.block-2__wrapper {
   display: flex;
   justify-content: space-between;
   padding-left: 50px;
@@ -118,73 +116,69 @@
   margin-bottom: 30px;
 }
 
-
-.main-text__result{
+.main-text__result {
   display: flex;
   width: 200px;
   padding: 5px;
   border-radius: 10px;
-  background-color: #C18730;
+  background-color: #c18730;
   border: none;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-weight: 600;
   color: black;
   align-items: center;
 }
 
-
-.rigth_bottom{
+.rigth_bottom {
   display: flex;
-  
 }
-.right-top{
+.right-top {
   display: flex;
   padding-bottom: 15px;
 }
-.right-top__input{
+.right-top__input {
   max-width: 120px;
   padding-left: 5px;
   border-radius: 10px;
-  background-color: #C18730;
+  background-color: #c18730;
   border: none;
   font-weight: 600;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
 }
-.right-top__label{
-  margin-right:8px ;
-  font-family: "Archivo Black", sans-serif;
+.right-top__label {
+  margin-right: 8px;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 15px;
   font-weight: 600;
   color: rgb(71, 71, 71);
 }
 
-.rigth_bottom__button{
+.rigth_bottom__button {
   padding: 8px 12px;
   max-width: 110px;
   max-height: 50px;
   border-radius: 30px;
-  background: #255BE8;
+  background: #255be8;
   color: #fff;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 18px;
   font-weight: 900;
   border: none;
   margin-right: 12px;
 }
 
-
-.main-right__block-3{
+.main-right__block-3 {
   margin-bottom: 30px;
 }
-.subscribe-text{
+.subscribe-text {
   text-align: center;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 28px;
   font-weight: 600;
   color: rgb(71, 71, 71);
   margin-bottom: 20px;
 }
-.subscribe-form__button{
+.subscribe-form__button {
   margin-top: 10px;
   display: block;
   text-align: center;
@@ -192,33 +186,35 @@
   max-width: 130px;
   max-height: 50px;
   border-radius: 30px;
-  background: #255BE8;
+  background: #255be8;
   color: #fff;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 18px;
   font-weight: 900;
   border: none;
   margin-right: 12px;
   margin-left: 60px;
 }
-.subscribe-form__input{
+.subscribe-form__input {
   max-width: 320px;
   padding-left: 5px;
   border-radius: 10px;
-  background-color: #C18730;
+  background-color: #c18730;
   border: none;
   font-weight: 600;
-  font-family: "Archivo Black", sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   /* margin-right: 70px; */
 }
-.subscribe-form__label{
-  font-family: "Archivo Black", sans-serif;
+.subscribe-form__label {
+  font-family: 'Archivo Black', sans-serif;
   font-size: 18px;
   font-weight: 600;
   color: rgb(71, 71, 71);
   /* margin-right: 70px; */
 }
 
-.block-3__content{
-  margin-left: 70px ;
+.block-3__content {
+  margin-left: 70px;
 }
+
+
